--- a/scss/modules/lists/_classes.scss
+++ b/scss/modules/lists/_classes.scss
@@ -12,6 +12,7 @@
 
 .tile {
     &-content { @extend %tile-content; }
+    &-icon { @extend %tile-icon; }
     &-control {
         @extend %tile-control;
 
