--- a/scss/modules/lists/_module.scss
+++ b/scss/modules/lists/_module.scss
@@ -5,6 +5,7 @@
 // List Settings
 $tile-padding: 1rem !default;
 $tile-valign: middle !default;
+$tile-icon-width: 3rem !default;
 $tile-control-width: 4rem !default;
 
 // Imports
