Okay, documentation this time for real. Adding custom renderer.

--- a/docs/views/grid.html
+++ b/docs/views/grid.html
@@ -14,14 +14,14 @@
 
 <h2>Column Offset</h2>
 <div class="field">
-    <strong>Column Width: </strong><input type="number" name="component.grid.column.class1" ng-model="component.grid.column.class1" min="1" max="12">
+    <strong>Column Width: </strong><input type="number" name="component.grid.column.class1" ng-model="components.grid.column.class1" min="1" max="12">
 </div>
 <div class="field">
     <strong>Offset: </strong><input type="number" name="component.grid.column.class2" ng-model="component.grid.column.class2" min="0" max="{{12 - component.grid.column.class1}}">
 </div>
 <div class="row-1 field {{component.grid.columns.class1}}">
     <div class="theme-secondary col-{{component.grid.column.class1}} col-offset-{{component.grid.column.class2}}">col-{{component.grid.column.class1}} col-offset-{{component.grid.column.class2}}</div>
-</div>
+</div>s
 
 <h2>Column Grid Blocks</h2>
 <div class="cols-3 gutter">
