--- a/scss/modules/buttons/_module.scss
+++ b/scss/modules/buttons/_module.scss
@@ -17,6 +17,7 @@ $button-icon-margin: 0.5rem !default;
 $button-disabled-opacity: 0.5 !default;
 $button-disabled-cursor: not-allowed !default;
 $button-decoration: none !default;
+$button-font-weight: normal !default;
 
 // Hover Button Settings
 $button-hover-decoration: none !default;
