--- a/scss/modules/grid/_components.scss
+++ b/scss/modules/grid/_components.scss
@@ -3,7 +3,7 @@
 // ===============
 
 %content, %pad {
-    padding: $grid-content-padding;
+    padding: $grid-content-padding !important;
 }
 
 %pad-vertical {
