--- a/css/cadenza.css
+++ b/css/cadenza.css
@@ -3308,7 +3308,7 @@
 }
 
 .content, .all-content > *, .pad {
-  padding: 16px;
+  padding: 16px !important;
 }
 
 .pad-vertical {
@@ -8585,7 +8585,7 @@ h1.inline, .h.inline, [class*=" h-"].inline, [class^="h-"].inline, h2.inline, h3
 }
 
 h1 > small, h1 > .small, .h > small, .h > .small, [class*=" h-"] > small, [class*=" h-"] > .small, [class^="h-"] > small, [class^="h-"] > .small, h2 > small, h2 > .small, h3 > small, h3 > .small, h4 > small, h4 > .small, h5 > small, h5 > .small, h6 > small, h6 > .small {
-  font-size: 51.2%;
+  font-size: 64%;
 }
 
 h1 > .large, .h > .large, [class*=" h-"] > .large, [class^="h-"] > .large, h2 > .large, h3 > .large, h4 > .large, h5 > .large, h6 > .large {
@@ -8673,7 +8673,8 @@ h6.double, .h-6.double {
   font-size: 2rem ;
 }
 
-body {
+html {
+  font-size: 14px;
   font-style: normal;
   text-rendering: optimizeLegibility;
   word-wrap: break-word;
@@ -8696,7 +8697,7 @@ p.lead {
 }
 
 small, .small {
-  font-size: 64%;
+  font-size: 80%;
 }
 
 .large {
@@ -8824,8 +8825,8 @@ a:hover, a > :hover {
 
 pre, .pre {
   white-space: pre;
-  font-size: 8.96px ;
-  font-size: 0.64rem ;
+  font-size: 11.2px ;
+  font-size: 0.8rem ;
   font-family: Consolas, monaco, monospace;
 }
 pre code, .pre code, pre .code, .pre .code {
@@ -8836,14 +8837,14 @@ pre code, .pre code, pre .code, .pre .code {
 
 pre code, pre .code, .pre code, .pre .code, code, .code {
   white-space: pre;
-  font-size: 8.96px ;
-  font-size: 0.64rem ;
+  font-size: 11.2px ;
+  font-size: 0.8rem ;
   font-family: Consolas, monaco, monospace;
 }
 
 kbd, .kbd {
-  font-size: 7.168px ;
-  font-size: 0.512rem ;
+  font-size: 8.96px ;
+  font-size: 0.64rem ;
 }
 
 blockquote {
@@ -8853,8 +8854,8 @@ blockquote {
   font-size: 1.25rem ;
 }
 blockquote footer {
-  font-size: 8.96px ;
-  font-size: 0.64rem ;
+  font-size: 11.2px ;
+  font-size: 0.8rem ;
 }
 
 q::before, q.double::before {
@@ -11478,8 +11479,8 @@ input[type="url"],
 input[type="search"],
 input[type="tel"],
 input[type="color"] {
-  font-size: 8.96px ;
-  font-size: 0.64rem ;
+  font-size: 11.2px ;
+  font-size: 0.8rem ;
   display: block;
   width: 100%;
   padding: 0.5rem;
@@ -11504,8 +11505,8 @@ input[type="url"].small,
 input[type="search"].small,
 input[type="tel"].small,
 input[type="color"].small {
-  font-size: 7.168px ;
-  font-size: 0.512rem ;
+  font-size: 8.96px ;
+  font-size: 0.64rem ;
 }
 
 textarea.large,
@@ -11556,8 +11557,8 @@ textarea {
 }
 
 select {
-  font-size: 8.96px ;
-  font-size: 0.64rem ;
+  font-size: 11.2px ;
+  font-size: 0.8rem ;
   display: block;
   width: 100%;
   -webkit-appearance: none;
@@ -11581,8 +11582,8 @@ label input.implicit[type="radio"], label input.implicit[type="checkbox"] {
 }
 
 label {
-  font-size: 8.96px ;
-  font-size: 0.64rem ;
+  font-size: 11.2px ;
+  font-size: 0.8rem ;
   display: block;
   margin-bottom: 0.25rem;
 }
@@ -12914,8 +12915,8 @@ nav.horizontal.full {
 }
 
 .dropdown-container > menu {
-  font-size: 8.96px ;
-  font-size: 0.64rem ;
+  font-size: 11.2px ;
+  font-size: 0.8rem ;
   min-width: 10rem;
   overflow-x: hidden;
   position: absolute;
@@ -13087,9 +13088,10 @@ button, .button, input[type="button"], input[type="submit"] {
   white-space: nowrap;
   background-image: none;
   line-height: 1;
+  font-weight: normal;
   border-radius: 2px;
-  font-size: 8.96px ;
-  font-size: 0.64rem ;
+  font-size: 11.2px ;
+  font-size: 0.8rem ;
   text-align: center;
   text-transform: none;
 }
@@ -13115,14 +13117,14 @@ button:hover, .button:hover, input[type="button"]:hover, input[type="submit"]:ho
 }
 
 button.tiny, .button.tiny, input[type="button"].tiny, input[type="submit"].tiny, .buttons-tiny > button, .buttons-tiny > .button, .buttons-tiny > input[type="button"], .buttons-tiny > input[type="submit"] {
-  font-size: 5.7344px ;
-  font-size: 0.4096rem ;
+  font-size: 7.168px ;
+  font-size: 0.512rem ;
   padding: 0.25rem 0.5rem;
 }
 
 button.small, .button.small, input[type="button"].small, input[type="submit"].small, .buttons-small > button, .buttons-small > .button, .buttons-small > input[type="button"], .buttons-small > input[type="submit"] {
-  font-size: 7.168px ;
-  font-size: 0.512rem ;
+  font-size: 8.96px ;
+  font-size: 0.64rem ;
   padding: 0.25rem 0.5rem;
 }
 
@@ -13757,8 +13759,8 @@ button.transparent.darken:focus, .button.transparent.darken:focus, input[type="b
 }
 
 .badge, .label {
-  font-size: 7.168px ;
-  font-size: 0.512rem ;
+  font-size: 8.96px ;
+  font-size: 0.64rem ;
   white-space: nowrap;
   overflow: hidden;
   text-decoration: none;
@@ -13791,8 +13793,8 @@ button.transparent.darken:focus, .button.transparent.darken:focus, input[type="b
 }
 
 .badge {
-  font-size: 7.168px ;
-  font-size: 0.512rem ;
+  font-size: 8.96px ;
+  font-size: 0.64rem ;
   text-transform: none;
   text-decoration: none;
   z-index: 2;
@@ -13862,8 +13864,8 @@ button.transparent.darken:focus, .button.transparent.darken:focus, input[type="b
   pointer-events: none;
 }
 .tooltip[title]:before, [class*=" tooltip-"][title]:before, [class^="tooltip-"][title]:before {
-  font-size: 7.168px ;
-  font-size: 0.512rem ;
+  font-size: 8.96px ;
+  font-size: 0.64rem ;
   content: attr(title);
   white-space: nowrap;
   overflow: hidden;
@@ -14207,8 +14209,8 @@ table.horizontal, table.vertical, table.condensed, table {
   border-collapse: collapse;
 }
 table.horizontal thead tr th, table.vertical thead tr th, table.condensed thead tr th, table thead tr th, table.horizontal thead tr td, table.vertical thead tr td, table.condensed thead tr td, table thead tr td {
-  font-size: 8.96px ;
-  font-size: 0.64rem ;
+  font-size: 11.2px ;
+  font-size: 0.8rem ;
   text-transform: uppercase;
   padding: 0.5rem;
 }
@@ -14216,8 +14218,8 @@ table.horizontal tfoot tr td, table.vertical tfoot tr td, table.condensed tfoot 
   padding: 0.5rem;
 }
 table.horizontal tr td, table.vertical tr td, table.condensed tr td, table tr td, table.horizontal tbody tr td, table.vertical tbody tr td, table.condensed tbody tr td, table tbody tr td {
-  font-size: 8.96px ;
-  font-size: 0.64rem ;
+  font-size: 11.2px ;
+  font-size: 0.8rem ;
   padding: 0.5rem;
 }
 
@@ -14257,41 +14259,64 @@ table.condensed tr td, table.condensed tbody tr td {
   }
 }
 
-table tr, table th, table td, table thead tr, table thead th, table thead td, table tbody tr, table tbody th, table tbody td, table tfoot tr, table tfoot th, table tfoot td {
-  border-width: 1px;
-  border-style: solid;
+table {
+  background-color: transparent;
+  color: #363636;
+  border-color: #525252;
 }
-table thead tr {
-  border-bottom-width: 2px;
-}
-table tbody + tbody tr:first-child {
-  border-top-width: 2px;
-}
-
 table thead {
   background-color: transparent;
+  color: #363636;
 }
 table tfoot {
   background-color: transparent;
+  color: #363636;
 }
-table, table tbody {
+table tbody {
+  background-color: transparent;
+  color: #363636;
+}
+table tr {
+  background-color: transparent;
+  color: #363636;
+}
+table tr:hover {
   background-color: transparent;
 }
 table thead, table tr, table th, table td {
   border-color: #525252;
 }
-table.zebra tr:nth-child(even), table.striped tr:nth-child(even) {
-  background-color: #E7E7E7;
+table.striped {
+  background-color: transparent;
+  color: #363636;
+  border-color: #525252;
 }
-table.zebra tr:nth-child(odd), table.striped tr:nth-child(odd) {
+table.striped thead {
+  background-color: transparent;
+  color: #363636;
+}
+table.striped tfoot {
+  background-color: transparent;
+  color: #363636;
+}
+table.striped tbody {
+  background-color: transparent;
+  color: #363636;
+}
+table.striped tr {
+  background-color: transparent;
+  color: #363636;
+}
+table.striped tr:hover {
   background-color: transparent;
 }
-table.zebra tr:only-child, table.striped tr:only-child {
-  background-color: transparent;
+table.striped tr:nth-child(even) {
+  background-color: #EFEFEF;
 }
-table.hover tr:hover {
-  background-color: #dadada;
+table.striped thead, table.striped tr, table.striped th, table.striped td {
+  border-color: #525252;
 }
+
 .modal, .panel {
   font-size: 14px ;
   font-size: 1rem ;
@@ -14353,8 +14378,8 @@ table.hover tr:hover {
 }
 
 .alert-small, .alert {
-  font-size: 8.96px ;
-  font-size: 0.64rem ;
+  font-size: 11.2px ;
+  font-size: 0.8rem ;
   display: block;
   width: 100%;
   padding: 16px;
