--- a/scss/modules/themes/_module.scss
+++ b/scss/modules/themes/_module.scss
@@ -97,8 +97,8 @@ $colors: (
     'primary-light': $color-primary-light,
     'secondary': $color-secondary,
     'secondary-light': $color-secondary-light,
-    'white': white,
-    'black': black,
+    'white': $color-white,
+    'black': $color-black,
     'lighten': $color-lighten,
     'darken': $color-darken,
     'success': $color-success,
