--- a/scss/modules/type/_module.scss
+++ b/scss/modules/type/_module.scss
@@ -75,6 +75,7 @@ $type-pre-style: default !default;
 $type-pre-theme: default !default;
 $type-pre-scale: -1 !default;
 $type-pre-font-family: $type-monospace-font-family !default;
+$type-pre-margin: 0 0 1rem 0 !default;
 $type-code-scale: -1 !default;
 $type-code-font-family: $type-pre-font-family !default;
 $type-kbd-scale: -2 !default;
