--- a/scss/modules/grid/_module.scss
+++ b/scss/modules/grid/_module.scss
@@ -1,6 +1,9 @@
-//
-// Grid Module
-// ===========
+/// 
+/// # Grid Module
+/// Contains column, row, and stack components.
+/// @group module
+/// @author David Khourshid
+/// 
 
 // Shared Grid Settings
 // TODO: use maps
